--- a/basic-form-renderers/controlled-input-working/index.html
+++ b/basic-form-renderers/controlled-input-working/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>]v[ mobx autorun example</title>
+	<link rel="stylesheet" href="../../general/demo.css">
 </head>
 <body>
 
