--- a/basic-form-renderers/controlled-input/index.html
+++ b/basic-form-renderers/controlled-input/index.html
@@ -3,11 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>]v[ mobx autorun example</title>
-	<link rel="stylesheet" href="../../general/demo.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
 </head>
 <body>
-
-<div id="mount"></div>
+<div id="mount" class="container" style="margin-top: 40px"></div>
 
 <script src="https://cdn.jsdelivr.net/g/react@15.5.4(react.min.js+react-dom.min.js),lodash@4.17.4"></script>
 <script src="https://unpkg.com/mobx@3.1.9/lib/mobx.umd.min.js"></script>
