More simple examples

--- a/basic-form-renderers/controlled-input/demo.html
+++ b/basic-form-renderers/controlled-input/demo.html
@@ -1,4 +1,4 @@
-<div id="mount"></div>
+<div id="mount" class="container" style="margin-top: 40px"></div>
 
 <script src="https://cdn.jsdelivr.net/g/react@15.5.4(react.min.js+react-dom.min.js),lodash@4.17.4"></script>
 <script src="https://unpkg.com/mobx@3.1.9/lib/mobx.umd.min.js"></script>
