--- a/basic-form-renderers/controlled-input-working/index.html
+++ b/basic-form-renderers/controlled-input-working/index.html
@@ -3,13 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>]v[ mobx autorun example</title>
-	<link rel="stylesheet" href="../../general/demo.css">
 </head>
 <body>
+<div id="mount" class="container" style="margin-top: 40px"></div>
 
-<div id="mount"></div>
-
-<script src="https://cdn.jsdelivr.net/g/react@15.5.4(react.min.js+react-dom.min.js),lodash@4.17.4"></script>
+<script src="https://cdn.jsdelivr.net/g/react@15.5.4(react.js+react-dom.js),lodash@4.17.4"></script>
 <script src="https://unpkg.com/mobx@3.1.9/lib/mobx.umd.min.js"></script>
 <script src="https://unpkg.com/mobx-react@4.1.8/index.js"></script>
 <script src="https://unpkg.com/mobx-react-devtools"></script>
