More simple examples

--- a/basic-form-renderers/controlled-input-working/index.html
+++ b/basic-form-renderers/controlled-input-working/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>]v[ mobx autorun example</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
 </head>
 <body>
 <div id="mount" class="container" style="margin-top: 40px"></div>
